[package]
name = "tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.16", features = ["derive"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
log = "0.4.20"
ratatui = "0.25.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = "0.7.10"
